--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.1.8",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
